2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Ensure that the child is not localised.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Check for themes/starfield/theme.txt and not
	themes/starfield.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regcomp.c (regerror): Fix out-of-range array lookup.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/i386/idt.c (grub_gdb_breakpoint): Remove old debug code.

2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hashsum.c (grub_cmd_hashsum): Remove dot at the end
	of error message.

2012-03-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix install non-PreP IEEE1275 install.

2012-03-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/sendkey.c (GRUB_MOD_INIT): Fix confusing
	message.
	* util/grub-install.in: Fix and gettextize error message.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (options): Replace N with NUM and S with STRING.
	Gettextize.
	* util/grub-mount.c (options): Likewise.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c (options): Replace VAR with VARNAME and
	gettextize.
	* grub-core/commands/search_wrap.c (options): Likewise.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix a spurious warning.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S (multiboot_trampoline): Fix
	size calculation.
	* grub-core/kern/i386/realmode.S (realidt): Assume default BIOS IDT if
	none is known.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_net_addr_to_str): Don't translate
	"temporary" since it's used in identifier and is limited in space.

2012-03-08  Vladimir Serbinenko  <phcoder@gmail.com>
